<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Log Jump"
            android:textSize="10pt"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <AutoCompleteTextView
                android:id="@+id/jump_edit_exit_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Exit name" />

            <EditText
                android:id="@+id/jump_edit_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:hint="Date"
                android:inputType="date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="Type"
                    android:textSize="7pt"></TextView>

                <Spinner
                    android:id="@+id/jump_edit_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="Pilot Chute"
                    android:textSize="7pt"></TextView>

                <Spinner
                    android:id="@+id/jump_edit_pc_size"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="Slider"
                    android:textSize="7pt"></TextView>

                <Spinner
                    android:id="@+id/jump_edit_slider"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>

        <Spinner
            android:id="@+id/jump_edit_suit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp" />

        <TextView
            android:id="@+id/jump_edit_gear_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="Rig"
            android:textSize="7pt"></TextView>

        <Spinner
            android:id="@+id/jump_edit_gear"
            android:layout_width="fill_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="Delay"
                    android:textSize="7pt"></TextView>

                <EditText
                    android:id="@+id/jump_edit_delay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:hint="0"
                    android:inputType="number"></EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="PC Config"
                    android:textSize="7pt"></TextView>

                <Spinner
                    android:id="@+id/jump_edit_pc_config"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/jump_edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|left"
            android:hint="Description"
            android:inputType="textMultiLine"
            android:lines="3"
            android:minLines="3"></EditText>


        <Button
            android:id="@+id/jump_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="save"
            android:text="Save" />

    </LinearLayout>
</ScrollView>