...
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TableRow>

                        <Button
                            android:id="@+id/exit_picture_button"
                            android:text="Add Picture" />

                    </TableRow>

                    <TableRow>

                        <HorizontalScrollView
...
