...
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:text="Enable PIN"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Switch
                    android:id="@+id/settings_pin_switch"
                    android:layout_width="match_parent"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
...
                    android:layout_alignParentStart="true"
                    android:ellipsize="marquee"
                    android:text="Start jump #"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/preference_start_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="4"
                    android:imeOptions="actionDone"
                    android:inputType="number"
...
                    android:layout_alignParentStart="true"
                    android:ellipsize="marquee"
                    android:text="@string/default_slider_config"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Spinner
                    android:id="@+id/preference_default_slider_config_value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAlignment="textEnd" />

            </TableRow>
...
                    android:layout_alignParentStart="true"
                    android:ellipsize="marquee"
                    android:text="Jump type"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Spinner
                    android:id="@+id/preference_default_jump_type_value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAlignment="textEnd" />

            </TableRow>
...
                    android:layout_alignParentStart="true"
                    android:ellipsize="marquee"
                    android:text="@string/default_pc_size"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Spinner
                    android:id="@+id/preference_default_pc_size_value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAlignment="textEnd" />

            </TableRow>
...
