...
                android:id="@+id/nav_gallery"
                android:icon="@android:drawable/ic_menu_gallery"
                android:title="@string/gallery" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_zoom"
                android:title="Settings" />
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_menu_share"
                android:title="Sign in" />
        </menu>
    </item>
...
